--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 15 09:55:29 CST 2020
+#Fri Sep 18 22:21:41 CST 2020
 ndk.dir=C\:\\Users\\kim\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\kim\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/kim.pan/Library/Android/sdk
